--- a/kinerja.html
+++ b/kinerja.html
@@ -46,11 +46,11 @@
       <label>Jabatan:</label>
       <select name="jabatan" class="input" required>
         <option value="">-- Pilih Jabatan --</option>
-        <option value="Guru SDI Ulumiyah Al Makruf">Guru SDI</option>
-        <option value="Kepala Sekolah SDI Ulumiyah Al Makruf">Kepala Sekolah</option>
-        <option value="Ketua Yayasan Ulumiyah Al Makruf">Ketua Yayasan</option>
-        <option value="Pimpinan Yayasan Ulumiyah Al Makruf (Owner)">Owner</option>
-        <option value="Wali Murid SDI Ulumiyah Al Makruf">Wali Murid</option>
+        <option value="Guru SDI Ulumiyah Al Makruf">Guru SDI Ulumiyah Al Makruf</option>
+        <option value="Kepala Sekolah SDI Ulumiyah Al Makruf">Kepala Sekolah SDI Ulumiyah Al Makruf</option>
+        <option value="Ketua Yayasan Ulumiyah Al Makruf">Ketua Yayasan Ulumiyah Al Makruf</option>
+        <option value="Pimpinan Yayasan Ulumiyah Al Makruf (Owner)">Pimpinan Yayasan Ulumiyah Al Makruf (Owner)</option>
+        <option value="Wali Murid SDI Ulumiyah Al Makruf">Wali Murid SDI Ulumiyah Al Makruf</option>
       </select>
 
       <h2>Isi Penilaian (1 = Sangat Buruk, 5 = Sangat Baik)</h2>
